# dropin

./: README.md
.github/workflows/: deploy-canopyproof.yml  deploy-cloudflare-worker.yml  phase16-6-opennext-build-only.yml  phase16-8-route-composition-preview.yml  phase16-8-worker-preview.yml
dropin-earth/: .env.example  .gitignore  CHANGELOG.md  README.md  deploy-canopyproof-auto.sh  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
dropin-earth/contracts/solana/programs/dropin_anchor/: Cargo.toml
dropin-earth/contracts/solana/programs/dropin_anchor/src/: errors.rs  lib.rs  state.rs
dropin-earth/contracts/solana/programs/dropin_anchor/src/instructions/: anchor_drop_root.rs  anchor_impact_certificate.rs  anchor_round_root.rs  claim_merkle_drop.rs  mod.rs  revoke_anchor.rs
dropin-earth/docs/: api.md  architecture.md  carbon-methodology.md  contracts.md  deploy-cloudflare.md  deployment-cloudflare-canopyproof.md  deployment.md  failure-injection.md  incident-response.md  launch-decision-record.md  launch-readiness.md  operator-dry-run.md  payment-intents.md  product.md  production-canopyproof-industrial-runbook.md  red-team.md  runbook-testnet-campaign.md  rwa.md  solana-anchor.md  telegram-miniapp.md  testnet-campaigns.md  testnet-operator-daily-report.md  ton-testnet-payments.md  treasury-fund-engine.md  ui-system.md
dropin-earth/reports/: canopyproof-cloudflare-production-report.md  (+8 more)
dropin-main/: package-lock.json  package.json  pnpm-lock.yaml
reports/: phase16-9-release-council-approval.json
(+246 files in other folders)
