[package]
name = "dropin_anchor"
version = "0.1.0"
description = "Dropin Earth Solana proof root anchoring program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dropin_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
blake3 = "=1.5.5"
borsh = "=1.5.7"
indexmap = "=2.2.6"
proc-macro-crate = "=3.1.0"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
unicode-segmentation = "=1.11.0"
